# mcp-search-hub

./: .env.dev.example  .env.example  .env.prod.example  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  GETTING_STARTED.md  ML_IMPROVEMENTS.md  README.md  REFERENCES.md  TODO-COMPLETED.md  TODO.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server_simplification_summary.md  test_stdio.py
.github/workflows/: tests.yml
docs/: CLAUDE_DESKTOP_SETUP.md  README.md  architecture-decisions.md  consistent-architectural-patterns.md  consistent-service-interfaces.md  llm-query-routing.md  middleware.md  migration-to-unified-router.md  multi-server-architecture.md  openapi-documentation.md  pydantic-v2-migration.md  retry.md  simplification-summary.md  stdio-transport.md  unified-error-handling.md
docs/adrs/: 001-provider-integration-architecture.md  002-routing-system-design.md  003-caching-implementation.md  004-middleware-architecture.md  005-provider-selection-strategy.md  006-embedding-official-mcp-servers.md
docs/architecture/: caching.md  llm-routing.md  middleware.md  multi-server.md  overview.md  retry-patterns.md  tiered-caching.md
docs/developers/: README.md  api-reference.md  contributing.md  coverage-report.md  development.md  provider-architecture.md  provider-management.md
docs/operators/: README.md  configuration-standards.md  docker.md  production-setup.md
docs/troubleshooting/: common-issues.md
docs/users/: README.md  claude-desktop-setup.md  getting-started.md  quick-start.md
examples/: ml_optimizations.py  model_training.py
examples/claude-config/: README.md  claude_desktop_config.json  minimal_config.json  multi-server-setup.json
mcp_search_hub/: __init__.py  config.py  main.py  server.py
mcp_search_hub/config/: __init__.py  settings.py
mcp_search_hub/experimentation/: __init__.py  ab_testing.py
mcp_search_hub/middleware/: __init__.py  auth.py  base.py  error_handler.py  logging.py  rate_limit.py  retry.py
mcp_search_hub/models/: base.py  component.py  config.py  interfaces.py  providers.py  (+3 more)
scripts/: generate_client_sdk.py  run_benchmarks.py  setup_claude_desktop.py  validate_docker_setup.sh
tasks/: README.md  TODO-COMPLETED.md  TODO-V2.md  TODO.md
tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_auth_middleware.py  test_auth_middleware_errors.py  test_base_mcp.py  test_cache.py  test_cascade_router.py  test_config_loader.py  test_deduplication.py  test_docker_config.py  test_end_to_end.py  test_enhanced_deduplication.py  test_enhanced_merger.py  test_enhanced_merger.py.skip  test_enhanced_router.py  test_error_handler_middleware.py  test_exa_mcp.py  test_firecrawl.py  test_firecrawl_mcp.py  test_health_metrics.py  test_hybrid_integration.py  test_interfaces.py  test_linkup_mcp.py  test_logging_middleware.py  test_metadata_enrichment.py  test_middleware_base.py  test_middleware_manager.py  test_openapi_schema.py  test_performance_benchmark.py  test_perplexity_mcp.py  test_provider_error_propagation.py  test_provider_retry_integration.py  test_pydantic_models.py  test_rate_limit_middleware.py  test_raw_content.py  test_retry_http.py  test_retry_middleware.py  test_router.py  (+6 more)
(+65 files in other folders)
